[metadata]
name = cheq_wsgi_middlewares
version = 0.0.1
author = CHEQ.AI
description = cheq middlewares for wsgi application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cheq-ai/Cheq-Python-Middlewares
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True